# daily

./: .coveragerc  .editorconfig  .gitignore  .graphqlrc.json  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json  pyproject.toml  pyrightconfig.json  tsconfig.json
app/: .prettierignore  .rubocop.yml  Gemfile  package.json  tailwind.config.js
app/app/assets/stylesheets/: application.tailwind.css  main.css
app/app/components/: card_component.html.erb  card_component.rb  colorspace_component.html.erb  colorspace_component.rb
app/app/controllers/: application_controller.rb  dashboard_controller.rb
app/app/controllers/admin/: themes_controller.rb
app/app/controllers/auth/: registrations_controller.rb  sessions_controller.rb
app/app/helpers/: application_helper.rb  session_helper.rb  tailwind_form_builder.rb
app/app/javascript/: application.js
app/app/javascript/controllers/: index.js  theme_controller.js
app/app/models/: user.rb
app/app/views/activities/: show.html.erb
app/app/views/dashboard/: index.html.erb
app/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
app/config/initializers/: tailwind_form_builder.rb
app/db/: schema.rb  seeds.rb
app/db/migrate/: 20220101212252_create_activities.rb
app/test/components/: card_component_test.rb  colorspace_component_test.rb
app/test/fixtures/: activities.yml
cli/: .prettierignore  package.json
cli/src/: cli.ts
cli/src/commands/: activity.ts
cli/src/lib/: activities.ts
ded/api/: schema.py
scripts/: deploy
src/: cli.ts
(+12 files in other folders)
